HTMLEditor::GetActiveEditingHost() does not return editing host if selection is collapsed in `<input>`
Categories
(Core :: DOM: Editor, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox94 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
If we flush pending notifications before calling execCommand
in insert-*-in-void-element.tentative.html
, HTMLEditor
does not work because GetActiveEditingHost()
returns nullptr
. This is wrong because Selection
cannot cross native anonymous subtree boundaries and the selection collapsed in <input>
element is valid. Therefore, it should not check whether the content has independent selection or not.
Assignee | ||
Comment 1•3 years ago
|
||
If we flush pending notifications before calling execCommand
in
insert-*-in-void-element.tentative.html
, HTMLEditor
does not work because
GetActiveEditingHost()
returns nullptr
. This is wrong because Selection
cannot cross native anonymous subtree boundaries and the selection collapsed in
<input>
element is valid. Therefore, it should not check whether the content
has independent selection or not.
Comment 3•3 years ago
|
||
bugherder |
Description
•