Bug 1731005 - HTMLEditor::GetActiveEditingHost() does not return editing host if selection is collapsed in `<input>` r=m_kato

If we flush pending notifications before calling `execCommand` in
`insert-*-in-void-element.tentative.html`, `HTMLEditor` does not work because
`GetActiveEditingHost()` returns `nullptr`.  This is wrong because `Selection`
cannot cross native anonymous subtree boundaries and the selection collapsed in
`<input>` element is valid.  Therefore, it should not check whether the content
has independent selection or not.

Differential Revision: https://phabricator.services.mozilla.com/D125791